--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,3 +1,6 @@
 // Colors
 $primary-color: #1f2136;
 $secondary-color: #19182b;
+$white-color: #fff;
+$secondary-active-color: #292a43;
+$header-icon-hover-color: #5e5d6b;
